# whole_body_mpc_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
.github/workflows/: ros_ci.yaml
include/whole_body_mpc_msgs/: conversions.h  state_feedback_gain_interface.h
msg/: ContactManager.msg  ContactPhase.msg  ContactSchedule.msg  GaitGeneratorSchedule.msg  MpcStatistics.msg  RiccatiControllerReference.msg  RiccatiGain.msg  StateFeedbackGain.msg  WholeBodyMpcReference.msg
src/riccati_controller/: reference_publisher.py  riccati_gain_interface.py
src/whole_body_mpc_msgs/: reference_publisher.py  state_feedback_gain_interface.py
srv/: AddContactSchedulesToQueue.srv  AddGaitGeneratorSchedulesToQueue.srv
