<?xml version="1.0"?>
<package format="3">
  <name>whole_body_mpc_msgs</name>
  <version>0.0.1</version>
  <description>
    Message and service data structures produced by the whole-body MPC controller
  </description>

  <maintainer email="carlos.mastalli@ad.ec.uk">Carlos Mastalli</maintainer>
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>whole_body_state_msgs</depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>pinocchio</exec_depend>
</package>
